package com.aaron.justlike.app.collection.entity;

public class UpdateEvent {
}
