@startuml

title __EVENT's Class Diagram__\n

  namespace com.aaron.justlike {
    namespace common {
      namespace event {
        class com.aaron.justlike.common.event.CollectionEvent {
            - collections : List<Collection>
            + CollectionEvent()
            + getCollections()
            + setCollections()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace event {
        class com.aaron.justlike.common.event.DeleteEvent {
            {static} + FROM_ELEMENT_ACTIVITY : int
            {static} + FROM_MAIN_ACTIVITY : int
            - eventType : int
            - path : String
            - position : int
            + DeleteEvent()
            + getEventType()
            + getPath()
            + getPosition()
            + setEventType()
            + setPath()
            + setPosition()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace event {
        class com.aaron.justlike.common.event.PhotoEvent {
            + PhotoEvent()
            + getPhoto()
            + setPhoto()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace event {
        class com.aaron.justlike.common.event.PreviewEvent {
            {static} + FROM_ELEMENT_ACTIVITY : int
            {static} + FROM_MAIN_ACTIVITY : int
            - eventType : int
            - list : List<T>
            - position : int
            + PreviewEvent()
            + getEventType()
            + getList()
            + getPosition()
            + setEventType()
            + setList()
            + setPosition()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace event {
        class com.aaron.justlike.common.event.SelectEvent {
            + SelectEvent()
            + getCollection()
            + setCollection()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace event {
        class com.aaron.justlike.common.event.UpdateEvent {
        }
      }
    }
  }
  

  com.aaron.justlike.common.event.PhotoEvent o-- com.aaron.justlike.common.http.unsplash.entity.photo.Photo : photo
  com.aaron.justlike.common.event.SelectEvent o-- com.aaron.justlike.common.bean.Collection : collection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
